infra/k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-platform
  labels:
    name: shop-platform
    environment: production
